[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "download-tiles"
version = "0.4.2"
description = "Download map tiles and store them in an MBTiles database"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = {text = "Apache License, Version 2.0"}
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click",
    "requests",
    "landez==2.5.0",
]

[project.optional-dependencies]
test = [
    "pytest",
    "requests-mock",
]

[project.urls]
Homepage = "https://github.com/simonw/download-tiles"
Issues = "https://github.com/simonw/download-tiles/issues"
CI = "https://github.com/simonw/download-tiles/actions"
Changelog = "https://github.com/simonw/download-tiles/releases"

[project.scripts]
download-tiles = "download_tiles.cli:cli"

[tool.setuptools]
packages = ["download_tiles"]